# timeseries-flwr-app

./: README.md  plot_metrics.py  pyproject.toml
log_metrics/: client_eval_log_Client_1.csv  client_eval_log_Client_2.csv  client_eval_log_Client_3.csv  federated_evaluate_log.csv  global_eval_log.csv
timeseries_flwr_app/: __init__.py  client_app.py  customfedadam_strategy.py  server_app.py  task.py
