[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timeseries-flwr-app"
version = "1.0.0"
description = "Federated Learning with Tensorflow/Keras and Flower for energy consumption prediction on timeseries data"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.19.0",
    "tensorflow>=2.11.1, <2.18.0",
    "scikit-learn>= 1.3.0, <2.0.0",
    "pandas>=2.0.0, <3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "varsha"

[tool.flwr.app.components]
serverapp = "timeseries_flwr_app.server_app:app"
clientapp = "timeseries_flwr_app.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
local-epochs = 3
batch-size = 32
verbose = false
n_input = 72
n_output = 24
stride = 1
# 1 year data - 365 * 24
one_year_hours = 8760
# two features - kwh and m3h
num_features = 2
learning-rate = 0.01

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3